--- a/show/index.html
+++ b/show/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YouTube API Example</title>
+  <title>Showcase-x</title>
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Estonia&display=swap');
 
@@ -46,6 +46,7 @@
     }
 
     #first {
+      font-size: x-large;
       top: 2%;
       left: 50%;
       transform: translateX(-50%);
@@ -124,6 +125,12 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
+    document.addEventListener("DOMContentLoaded", function() {
+  const now = new Date();
+  const day = now.getDate();
+
+  if ([9, 19, 29].includes(day)) {
+
     var min_w = 300; // minimum video width allowed
     var vid_w_orig;  // original video dimensions
     var vid_h_orig;
@@ -280,6 +287,17 @@
 
     jQuery(window).resize(function () { resizeToCover(); });
     jQuery(window).trigger('resize');
+
+  } else{
+    document.getElementById('welcome-container').classList.add('hidden');
+    document.getElementById('player-container').classList.remove('hidden');
+    document.querySelector('.timeCode').style.display = 'none';
+    document.getElementById("endScreen").style.display = "block";
+        setTimeout(function() {
+          document.getElementById("endScreen").style.display = "none";
+        }, 1000);
+  }
+});
   </script>
 </body>
 </html>
